updated readme
loading cfg

refactored mongo repository and oapi to include bson tags

mongo fully tested

handlers test

testing config

wip - fix tests

fixed test

few changes

encrypting password

filtering get users

added api docs

added health check

amendments

added ci

added linting

removed vet

removed readme last bit
